# android_kernel_sony_msm8994_kitakami

./: .gitignore  8937_diff  CONFIG_SUZURAN  CONFIG_SUZURAN_UM  CONFIG_TULIP  CONF_SATSUKI  COPYING  Makefile  Makefile.am  README  README.md  build.config.suzuran.gcc  config.sh  configure.ac  crashtag  default.prop  defconfig  fstab.fota  fstab.qcom  init  init.environ.rc  init.qcom.early_boot.sh  init.qcom.factory.sh  init.qcom.post_boot.sh  init.qcom.rc  init.qcom.sh  init.rc  init.sony-device-common.rc  init.sony-device.rc  init.sony-platform.rc  init.sony.rc  init.target.rc  init.tweak.rc  init.usb.rc  init.usbmode.platform.sh  init.usbmode.sh  init.zygote32.rc  init.zygote64_32.rc  module.prop  property_contexts  (+7 more)
TEMPLATE/: xyzmod.c
abnormal_reset/: Android.mk  Kbuild  Makefile.am  abnormal_reset_test.sh  tsensor_reset_mod.c
arch/arm64/: Kconfig  Makefile
bam_dmux_loopback/: Android.mk  Kbuild  Makefile.am  loopback.c  loopback_a2.c  loopback_a2.h  loopback_smsm.c  loopback_smsm.h  loopback_sps.c  loopback_sps.h
bus-timeout/: Android.mk  Makefile.am  README  bus_timeout_mod.c
common/: service.sh
coresight/: Android.mk  Makefile.am  README.txt  cs_common.sh  cs_test.sh
coresight/byte-cntr/: Makefile.am
coresight/cti/: Android.mk  Makefile.am  cti_test.sh
coresight/etm/: Makefile.am
coresight/mult_trace/: Makefile.am
coresight/platform/: Makefile.am  platform.sh
coresight/profile/: Android.mk  Makefile.am
coresight/sink_switch/: Makefile.am  etr_modes.sh  sinkswitch.sh
coresight/stm/: Makefile.am  stm_etf_dump.sh  stm_etr_dump.sh
coresight/stm-trace-marker/: Android.mk  Makefile.am
drivers/cpuidle/: lpm-levels.c
drivers/devfreq/: Kconfig  Makefile  governor_msm_adreno_tz_legacy.c
fs/proc/: base.c
glink/: Android.mk  Kbuild  Makefile.am  glink_ch_migration_test.c  glink_ch_migration_test.h  glink_loopback_client.c  glink_loopback_client.h  glink_loopback_xprt.c  glink_loopback_xprt.h  glink_mock_xprt.c  glink_mock_xprt.h  glink_pkt_loopback_test.c  glink_test_common.h  glink_unit_test.c
hrtimer/: Android.mk  Kbuild  Makefile.am  hrtimer_test.sh  hrtimer_test_module.c
ion/: Android.mk  Kbuild  Makefile.am  README.txt  compat_msm_ion_test_module.c  compat_msm_ion_test_module.h  cp_ion_tests.c  ion_test_plan.h  ion_test_utils.c  ion_test_utils.h  iontest.h  iontest.sh  kernel_ion_tests.c  msm_ion_test_module.c  msm_iontest.c  user_ion_tests.c
ip_accelerator/: Android.mk  Constants.h  DataPathTestFixture.cpp  DataPathTestFixture.h  DataPathTests.cpp  ExceptionTests.cpp  ExceptionsTestFixture.cpp  ExceptionsTestFixture.h  ExceptionsTests.cpp  Filtering.cpp  Filtering.h  FilteringEthernetBridgingTestFixture.cpp  FilteringEthernetBridgingTestFixture.h  FilteringEthernetBridgingTests.cpp  FilteringTest.cpp  HeaderInsertion.cpp  HeaderInsertion.h  HeaderInsertionTests.cpp  HeaderProcessingContextTestFixture.cpp  HeaderProcessingContextTestFixture.h  HeaderProcessingContextTests.cpp  HeaderRemovalTestFixture.cpp  HeaderRemovalTestFixture.h  HeaderRemovalTests.cpp  HeaderRemovalTests.h  IPAFilteringTable.cpp  IPAFilteringTable.h  IPAInterruptsTestFixture.cpp  IPAInterruptsTestFixture.h  IPAInterruptsTests.cpp  IPv4Packet.cpp  IPv4Packet.h  InterfaceAbstraction.cpp  InterfaceAbstraction.h  Kbuild  Logger.cpp  Logger.h  MBIMAggregationTestFixture.cpp  MBIMAggregationTestFixture.h  MBIMAggregationTestFixtureConf10.cpp  (+40 more)
ipc_logging/: Android.mk  Kbuild  Makefile.am  README  ipc_logging_test.c  ipc_logging_test.sh  run.sh
ipi/: Android.mk  Kbuild  Makefile.am  ipi_test_module.c
kernel/: Kconfig.locks  cpuset.c  fork.c  futex.c  hrtimer.c  sysctl.c
ldrex_strex/: Android.mk  Kbuild  Makefile.am  README.txt  ldrex_test.sh  ldrex_test_module.c  run.sh
lib/: Kconfig.debug
memory_prof/: Android.mk  Makefile.am  README.txt  alloc_profiles.c  alloc_profiles.h  concurrency-latency-kpi.c  memfeast.c  memory_prof.c  memory_prof.h  memory_prof.sh  memory_prof_module.c  memory_prof_module.h  memory_prof_util.c  memory_prof_util.h  op-alloc-pages.c  op-alloc.c  op-iommu-attach.c  op-iommu-detach.c  op-iommu-map-range.c  op-iommu-map.c  op-iommu-unmap-range.c  op-iommu-unmap.c  op-ion-cache.c  op-print.c  op-simple-ops.c  op-sleep.c  op-unused-client-ops.c  op-user-alloc.c  parse_results.py
memory_prof/alloc_profiles/: 1MB-10MB.txt  4KB-1MB.txt  alloc_pages.txt  cache_ops.txt  cache_ops1.txt  cache_ops2.txt  conc.txt  cp_heap.txt  general.txt  iommu_attach.txt  iommu_detach.txt  iommu_map.txt  iommu_map_range.txt  lat_android.txt  lat_standalone.txt  one_1GB_buffer_from_system.txt  pil1_heap.txt  qseecom_heap.txt  simple.txt  stability.txt  system.txt  system_secure_heap.txt  tons-of-clients.txt  user_alloc.txt  user_alloc_minimized.txt
memory_prof/hostscripts/: README  parse_results.py  trace_2_alloc_profile.py  tracepoint_parser.sh
modsign/: Android.mk  Kbuild  Makefile.am  README.txt  modsign_test.sh  modsign_test_module.c
msm_bus/: Android.mk  msm_bus_ioctl.c  msm_bus_test.c  msm_bus_test.h
msm_iommu/: Android.mk  Makefile.am  README.txt  apq8084_lpae_bfb.txt  iommutest.h  iommutest.sh  msm8916_cats.txt  msm8974_bfb.txt  msm8992_bfb.txt  msm8994_bfb.txt  msm_iommu_config.h  msm_iommu_test_module.c  msm_iommutest.c
ocmem/: Android.mk  Kbuild  Makefile.am  compat_msm_ocmem_test_module.c  compat_msm_ocmem_test_module.h  msm_ocmem_test.c  msm_ocmem_test_module.c  ocmem_test.c  ocmem_test.h  ocmem_test.sh
page-nom/: Android.mk  Kbuild  Makefile.am  README  page-nom.c
qdss/: Android.mk  stm_test.sh
sbin/: adbd  checkabortedflash  checkfirstboot  e2fsck_static  fota-ua  fsckwait  healthd  mr  qcrypto_module.hmac  qcrypto_module.ko  qdrbg_module.hmac  qdrbg_module.ko  qfintverify  qfintverify.hmac  ric  slideshow  ua-modem-switcher  wait4tad_static  wipedata
spinlock/: Android.mk  Kbuild  Makefile.am  spinlock_test_module.c
sps/: Android.mk  msm_sps_test_module.c
swp/: Android.mk  Makefile.am  swp.mk  swp_test.c
v4l2apps/: Makefile.am  v4l2ops.c  v4l2ops.h  v4l2overlay.c
watchdog/: Android.mk  Makefile.am  msm_watchdog_test_module.c
(+214 files in other folders)
